style.css
@import url("https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter&family=Poppins&family=Roboto&display=swap");

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

ul,
li {
  list-style: none;
}

button:hover,
button:active {
  background-color: #d45800;
  cursor: pointer;
}

nav {
  background-color: #3c3a39;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 20px;
}

#logo {
  color: #fff;
  font-family: "Roboto", sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 18px;
  line-height: 24px;
  text-decoration: none;
}

#header {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  height: 590px;
  padding: 120px 24px;
  background-color: #1c1a19;
  color: #fff;
}

#header h1 {
  font-family: "Crete Round", serif;
  font-style: normal;
  font-weight: 400;
  font-size: 56px;
  line-height: 64px;
  color: #ff6b00;
  margin-bottom: 10px;
}

#header h5 {
  font-size: 24px;
  font-family: "Roboto", sans-serif;
  font-style: normal;
  font-weight: 700;
  margin-bottom: 10px;
}

#header p {
  font-family: "Poppins", sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  margin-bottom: 10px;
}

#header ul {
  list-style: none;
}

.social-icons {
  display: flex;
  gap: 12px;
  padding: 12px;
}

.social-icons li {
  list-style: none;
}

#illustration {
  position: absolute;
  left: 65%;
  top: 60%;
}

#myworks {
  display: grid;
  grid-template-columns: 24px auto 24px;
  grid-template-rows: 100px repeat(5, 1fr);
  row-gap: 20px;
  width: 375px;
  margin-top: 100px;
}

#myworks #title {
  grid-column: 2/3;
  grid-row: 1/2;
  width: 327px;
  height: 83px;
  font-family: "Crete Round", serif;
  font-size: 18px;
  text-align: center;
}

#title h1 {
  margin-bottom: 24px;
}

#project1 {
  grid-column: 2/3;
  grid-row: 2/3;
  height: 568px;
}

#project1 h3 {
  font-family: "Crete Round", serif;
  font-style: normal;
  font-weight: 400;
  font-size: 32px;
  line-height: 44px;
}

#project1 p {
  font-family: "Inter", sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  color: #091e42;
  margin-bottom: 18px;
}

.skills {
  display: flex;
  gap: 12px;
}

.skills li {
  color: #091e42;
  border: 1px solid #8993a4;
  padding: 10px 12px;
  margin-bottom: 14px;
  list-style: none;
}

#project1 button {
  width: 124px;
  height: 48px;
  background-color: #ff6b00;
  font-family: "Inter", sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 17px;
  line-height: 24px;
  align-items: center;
  text-align: center;
  letter-spacing: 0.03em;
  padding: 12px;
  color: #fff;
  border: none;
}

#project2 {
  grid-column: 2/3;
  background-image: url("./images/Img\ Placeholder2.png");
  background-size: no-repeat;
  width: 327px;
  height: 386px;
  color: #fff;
}

#project2 h1 {
  font-family: "Crete Round", serif;
  font-style: normal;
  font-weight: 400;
  font-size: 32px;
  line-height: 44px;
  margin-top: 80px;
  padding: 0 24px;
}

#project2 p {
  font-family: "Inter", sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  padding: 0 24px;
  margin-bottom: 20px;
}

#project2 button {
  width: 327px;
  height: 48px;
  background-color: #ff6b00;
  font-family: "Inter", sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 17px;
  line-height: 24px;
  text-align: center;
  letter-spacing: 0.03em;
  padding: 12px;
  color: #fff;
  border: none;
}

#project2 .skills {
  padding: 0 24px;
}

.tools li {
  padding: 12px;
  font-size: 22px;
  text-align: center;
}

#project2 li {
  color: #fff;
}

#about-me {
  display: flex;
  flex-direction: column;
  background-color: #1c1a19;
  color: #f4f5f7;
}

#about-me #title {
  text-align: center;
  font-family: "Crete Round", sans-serif;
  font-weight: 400;
  font-size: 68px;
  letter-spacing: 0.37px;
  color: #ff6b00;
  margin-top: 120px;
}

#about-me p {
  font-family: "Inter", sans-serif;
  font-size: 18px;
  color: #f4f5f7;
  line-height: 24px;
  text-align: left;
  margin: 30px;
}

#about-me #download {
  font-family: "Inter", sans-serif;
  font-size: 18px;
  width: 161px;
  height: 48px;
  text-align: center;
  background-color: #ff6b00;
  color: #f4f5f7;
  border: none;
  margin-left: 30px;
}

/* #about-me img {
  position: absolute;
} */

#about-me hr {
  width: 327px;
  height: 0;
  margin: 50px 0 50px 24px;
}

#details {
  width: 327px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  font-family: "Inter", serif;
  margin-bottom: 100px;
}

#details .tools {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 20px;
  font-size: 32px;
}

#contact-me {
  display: flex;
  flex-direction: column;
  gap: 20px;
  justify-content: center;
  align-items: center;
  padding: 20px;
  margin-top: 50px;
}

#contact-me h1 {
  height: 216px;
  font-family: "Inter", sans-serif;
  font-size: 30px;
  line-height: 44px;
  text-align: center;
  color: #172b4d;
  margin-bottom: 100px;
}

#contact-me form {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 122px;
}

#contact-me input {
  width: 327px;
  height: 48px;
  border: none;
  border-bottom: 1px solid #dbd8d7;
  font-size: 22px;
  margin-bottom: 20px;
  padding: 20px;
}

#contact-me textarea {
  width: 327px;
  border: none;
  font-size: 22px;
  background-color: #fbf8f7;
  color: #3c3a39;
  padding: 20px;
  margin-bottom: 20px;
}

#contact-me button {
  width: 131px;
  height: 48px;
  background-color: #ff6b00;
  font-family: "Inter", sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 17px;
  line-height: 24px;
  align-items: center;
  text-align: center;
  letter-spacing: 0.03em;
  padding: 12px;
  color: #fff;
  border: none;
}

#contact-me hr {
  height: 0;
  width: 375px;
  background-color: #dfe1e6;
  margin-top: 100px;
}

#contact-me ul {
  padding: 30px;
}

